Updates styles and adds FAQ

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Park People | Greenbelt River Valley Connector Program</title>
-    <meta name="description" content="">
-    <meta property="og:url" content=""/>
-    <meta property="og:title" content=""/>
-    <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
-    <meta property="og:image" content="" />
+    <meta name="description" content="Over the next three years, through a collaboration between The Greenbelt Foundation and Park People, the Greenbelt River Valley Connector Program will provide grants to support fifteen place-based community projects across the GTHA that will celebrate and enhance these natural valley areas.">
+    <meta property="og:url" content="https://parkpeople.ca/PossibilityFlowsHere"/>
+    <meta property="og:title" content="Park People | Greenbelt River Valley Connector Program"/>
+    <meta property="og:site_name" content="Park People"/>
+    <meta property="og:description" content="Over the next three years, through a collaboration between The Greenbelt Foundation and Park People, the Greenbelt River Valley Connector Program will provide grants to support fifteen place-based community projects across the GTHA that will celebrate and enhance these natural valley areas."/>
+    <meta property="og:image" content="https://parkpeople.ca/listings/custom/uploads/2018/04/share_card.jpg" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Park_People" />
     <meta name="twitter:creator" content="@Park_People" />
-    <meta name="twitter:image" content="" />  
+    <meta name="twitter:image" content="https://parkpeople.ca/listings/custom/uploads/2018/04/share_card.jpg" />  
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
@@ -24,6 +24,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="dist/build.js?v=180426-1"></script>
+    <script src="dist/build.js?v=180426-v2"></script>
   </body>
 </html>
