--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="dist/build.js?v=180102-v1"></script>
+    <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180102-v2"></script>
+    <!-- <script src="dist/build.js?v=180102-v1"></script> -->
   </body>
 </html>
