--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180102-v3"></script>
-    <script src="dist/build.js?v=180102-v3"></script>
+    <!-- <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180102-v3"></script>
+    <script src="/possibilityflowshere/dist/build.js?v=180102-v3"></script> -->
+    <script src="https://parkpeople.ca/publicspaceinc/dist/build.js?v=180102-v3"></script>
   </body>
 </html>
