--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.16x16.png">
     <!-- <script src="https://use.fontawesome.com/ac16a4e359.js"></script> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700|Dosis:400,500,600,700|Open+Sans:400,700,800|Roboto+Condensed:300,400" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180102-v3"></script>
+    <!-- <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180102-v3"></script> -->
     <script src="dist/build.js?v=180102-v3"></script>
   </body>
 </html>
