--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180102-v3"></script> -->
-    <script src="dist/build.js?v=180102-v3"></script>
+    <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180616v1"></script>
+    <script src="dist/build.js?v=180616v1"></script>
   </body>
 </html>
