Update build for phase one

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://parkpeople.ca/possibilityflowshere/dist/build.js?v=180730-394g34g23w4g24g24w"></script>
-    <script src="dist/build.js?v=180730-3jh0438hgw04bhq3gq"></script>
+    <script src="https://parkpeople.ca/possibilityflowshere/dist/build-190219.js"></script>
+    <script src="dist/build-190219.js"></script>
   </body>
 </html>
