--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://parkpeople.ca/possibilityflowshere/dist/build-190219.js"></script>
-    <script src="dist/build-190219.js"></script>
+    <script src="https://parkpeople.ca/possibilityflowshere/dist/build-190219-v2.js"></script>
+    <script src="dist/build-190219-v2.js"></script>
   </body>
 </html>
